# thermal_monitor

./: .gitignore  README.md  THERMAL_MONITOR_DESIGN.md  pyproject.toml  run_monitor.sh  setup_venv.sh  thermal_monitor.html  thermal_monitor.js  thermal_monitor_example.yaml  thermal_monitor_zh.html  translations.js
systemd/: thermal-monitor.service  thermal-monitor.timer
tests/: conftest.py  test_alerts.py  test_analysis.py  test_collector.py  test_config.py  test_display.py  test_display_log.py  test_io_utils.py  test_logging_db.py  test_models.py  test_serialization.py  test_sources_ipmi.py  test_sources_local.py  test_sources_redfish.py  test_sources_snmp.py  test_sources_ssh.py
tests/fixtures/: minimal_config.yaml  sample_ipmi_output.txt  sample_redfish_thermal.json  sample_sensors_json.json
thermal_monitor/: __init__.py  __main__.py  _ansi.py  alerts.py  analysis.py  cli.py  collector.py  config.py  display.py  display_log.py  io_utils.py  logging_db.py  models.py  serialization.py
thermal_monitor/sources/: __init__.py  base.py  ipmi.py  local_sensors.py  redfish.py  registry.py  snmp.py  ssh_sensors.py
